--- a/client/src/App/App.css
+++ b/client/src/App/App.css
@@ -7,8 +7,14 @@
     display:flex;
     flex-direction:column;
     width:95%;
-    height: 100%;
-    margin-top:2px;
-    margin-left:auto;
-    margin-right:auto;
+    min-height: 90vh;
+    margin:0.5% auto 0.5% auto; 
+    background-color: #ffffff;
+}
+
+@media only screen  and (max-width:910px) {
+    .main-container{
+        min-height: 80vh;
+        margin:1.5% auto 1.5% auto; 
+    }
 }
