--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -4,7 +4,7 @@
     z-index:1;
     position:relative;
     top:0px;
-    }
+}
 
 .scrolled{
     position:sticky;
@@ -98,7 +98,7 @@
 }
 
 .logo{
-    padding:5px;
+    padding:5px; 
 }
 
 .search-bar{ 
@@ -172,7 +172,6 @@
     font-size:0.9em;
     color:rgb(218, 152, 218);
     text-decoration: none;
-    padding:6px;
     padding:12px;
     font-weight:bold;
     font-family:'acme';
@@ -184,7 +183,9 @@
     background-color: #2b2e30;
     border-bottom:1px solid rgb(218, 152, 218);  
 }
-
+.mobile-navv{
+    display:none;
+}
 .main-navigation{
     display:flex;
     flex-direction:row;
@@ -195,16 +196,16 @@
 }
 
 .main-navigation a{
-        text-decoration:none;
-        color:rgb(218, 152, 218);
-        padding:12px;
-        font-weight:bold;
-        font-size:0.99em;
-        font-family:'acme';
-        transition:all 0.1s ease;
-        outline:none;
-        border-top:1px solid #242729;
-        border-bottom:1px solid #242729;
+    text-decoration:none;
+    color:rgb(218, 152, 218);
+    padding:12px;
+    font-weight:bold;
+    font-size:0.9em;
+    font-family:'acme';
+    transition:all 0.1s ease;
+    outline:none;
+    border-top:1px solid #242729;
+    border-bottom:1px solid #242729;
 }
 
 .main-navigation a:hover{
@@ -214,8 +215,7 @@
 
 .main-navigation> .nav-link-active{
     background-color: #2b2e30;
-    border-bottom:1px solid rgb(218, 152, 218);
-       
+    border-bottom:1px solid rgb(218, 152, 218);      
 }
 
 .nav-open-icon{
@@ -226,7 +226,7 @@
     background-color: #242729;
     border:none;
     outline: none;
-    margin-right:2%;
+    margin-right:1%;
     font-size:2rem;
 }
     
@@ -240,21 +240,16 @@
 .show-qty{
    visibility: visible;
    position:relative;
-   /* top:-8px; */
    border:1px solid #dd4b39;
    background-color: #dd4b39;
    color:#fff;
    padding:1px 6px 1px 6px;
-   /* height:20px;
-   width:50px; */
    border-radius: 15%;
-
 }
 .hide-qty{
     border:1px solid #dd4b39;
     padding:6px;
     visibility: hidden;
-
 }
 
 /* .nav-cart-qty{
@@ -262,49 +257,51 @@
 } */
 
 @media only screen  and (max-width:910px){
+    .top-nav-bar{
+        min-height: 65px;
+    }
+    .mobile-navv{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        /* border:1px solid purple; */
+    }
     .gifs-bar {
         display:none;
-       }
-   
+    } 
     .header-container{
         display:flex;
         flex-direction: column;
         position:sticky;
         top:0;
         z-index:1;
-        }
-    
+    }   
     .top-nav-bar{
         height: 65px;
         padding:4px;
         border-radius:0 0 0 0;
     }
     .main-navigation{
+        display:none; 
+    }
+    .header-login{
         display:none;
        
-      
     }
-
-    .logo{
-        margin-top:5px;
-    }
-
     .login{
         display:none;
     }
-
     #sign-up-link{
         display:block;
     }
-
     .nav-open-icon{
-        margin-top:-4%;
         color:rgb(218, 152, 218);
-       display:inline-flex;
-       align-self: flex-end;
-       width:35px;   
+        display:inline-flex;
+        justify-content: center;
+        width:35px;
+        margin-right:1%;
+        /* border: 1px solid green; */
     }
-  
 }
 @media only screen  and (min-width:910px){
     .main-navigation{
@@ -316,49 +313,70 @@
         height:0%;
     }
 }
+@media only screen  and (max-width:600px){
+    .top-nav-bar{
+        min-height: 65px;
+    }
+    .logo{
+        display:flex;
+        padding:0;
+        /* border: 1px solid blue;  */
+    }
+    .search-bar{ 
+        display:flex;
+        justify-content: center;        
+        margin-bottom:0;
+        padding:5px;
+        width:100%;
+        /* margin-right: auto;  */
+        /* border: 1px solid red; */
+    }
+    .search-bar form{
+        width:100%; 
+    }
+    .search-bar form button{
+        cursor:pointer;
+        padding:3px;
+        width:13%;
+    }  
+}
 @media only screen  and (max-width:414px){
+    .top-nav-bar{
+        min-height: 60px;
+    }
     
-    .header-container{
-      display:flex;
-      flex-direction: column;
-      position:sticky;
-      top:0;
-      z-index:1;
-      }
-      .gifs-bar {
-          display:none;
-         }
-         .search-bar-form{
-             display:none;
-         }
+    .gifs-bar{
+        display:none;
+    }
+    .search{
+        justify-content: space-between;
+    }
+    .logo img{
+        width:70px;
+        height:40px;
+       
+    }
+    .search-bar{ 
+        display:none;
+       
+    }
+   
+    .search-bar-form{
+        display:none;
+    }
   .top-nav-bar{
-      height: 65px;
-      padding:4px;
-      border-radius:0 0 0 0;
+    height: 65px;
+    padding:4px;
+    border-radius:0 0 0 0;
   }
-
   .logo{
-      margin-top:5px;
-  
+    margin-top:5px;
   }
   .login{
-      display:none;
+    display:none;
   }
-  
   .main-navigation{
-      display:none;
-      
+      display:none;  
   }
-  
-
-  .nav-open-icon{
-      margin-top:-7%;
-      color:rgb(218, 152, 218);
-     display:inline-flex;
-     align-self: flex-end;
-     width:35px;
-    
-     
-  }
-  
+ 
 }
