--- a/client/src/components/LatestDealsPage/latestDeals.css
+++ b/client/src/components/LatestDealsPage/latestDeals.css
@@ -40,6 +40,19 @@ background-color: #ffffff;
 display:flex;
 flex-direction: row;
 flex-wrap: wrap;
-justify-content:space-between;
+justify-content: space-between;
 margin-top:0.3%;
+}
+
+@media only screen  and (max-width: 910px){
+ 
+}
+
+@media only screen  and (max-width: 600px) {
+ 
+
+}
+
+@media only screen  and (max-width: 414px) { 
+
 }
