--- a/client/src/components/MobileNav/mobileNav.css
+++ b/client/src/components/MobileNav/mobileNav.css
@@ -5,110 +5,93 @@
     width:50%;
     position:fixed;
     z-index:1;
-    top:20%;
+    top:15%;
     left:0;
-    /* background-color:rgb(218, 152, 218); */
-    background-color: #ffffff;
+    background-color:#242729;
     overflow-x:hidden;  
     border-radius: 0 6px 6px 0;
     animation-name:animatenav;
     animation-duration:0.6s;
-    box-shadow: 0 0 6px #292b2c;
     outline: none;
-
 }
 .mobile-nav-close{
   width:0;
-    /* animation-name:animatenavclose;
-    animation-duration:0.6s; */
-
 }
 
 @keyframes animatenav{
     from{
         left: -400px;
         opacity:0;
-        transition:all;
-        
+        transition:all;       
     }
-  
 }
 @keyframes animatenavclose{
     to{
         left: 800px;
-      
-        transition:all;
-        
+        transition:all;    
     }
-  
 }
-
-/* .mobile-close{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-
-} */
 
 .mobile-links{
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-     /* border: 1px solid white; */
-     height:100%;
-     border-radius: 0 6px 6px 0;
-
+    height:100%;
+    border-radius: 0 6px 6px 0;
 }
 .mobile-links a{
-    /* border:1px solid blue; */
     color:#292b2c;
+    color:rgb(218, 152, 218);
     width:100%;
     text-decoration: none;
     outline:none;
     padding:12px;
     text-align:justify;
-    /* text-indent: 5%; */
     transition:all 0.3s ease;
     font-weight: bold;
-    font-size: 1.02em;
-   
-  
+    font-size: 0.9em;
 }
 .mobile-links a:hover{
     background-color: #292b2c;
-      /* border: 1px solid rgb(218, 152, 218); */
-      box-shadow: 0 0 1px rgb(218, 152, 218);
+    box-shadow: 0 0 1px rgb(218, 152, 218);
     color:#ccc;
 }
-
 .mobile-link{
     display:flex;
     border-radius: 0 4px 0 0;
-    /* justify-content: center; */
-   
-    /* padding:10px; */
-   
-     /* border: 1px solid white; */
-    
-
 }
-.mobile-nav-item{
-    /* border:1px solid white; */
-
-} 
 .mobile-links .mobile-nav-link-active {
-    /* text-decoration: underline; */
     background-color: #292b2c;
-      /* border: 1px solid rgb(218, 152, 218); */
-    
-      /* box-shadow: 0 0 1px rgb(218, 152, 218); */
+    border-left: 2px solid rgb(218, 152, 218);
     color:rgb(218, 152, 218);
-
-}
-.mobile-nav-link{
-
+    color: rgb(230, 230, 230);
 }
 .mobile-nav-text{
     margin-left:2px;
+}
 
+@media only screen  and (max-width:910px) {
+    .mobile-nav{
+        width:25%;
+    }   
+}
+@media only screen  and (max-width:700px) {
+    .mobile-nav{
+        width:30%;
+    }
+}
+@media only screen  and (max-width:600px) {
+    .mobile-nav{
+        width:35%;
+    }
+}
+@media only screen  and (max-width:450px) {
+    .mobile-nav{
+        width:40%;
+    }
+}
+@media only screen  and (max-width:414px){
+    .mobile-nav{
+        width:55%;
+    }
 }
