--- a/client/src/components/SignupPage/signup.css
+++ b/client/src/components/SignupPage/signup.css
@@ -1,7 +1,4 @@
 
-
-
-
 .form-row{
     display:flex;
     flex-direction: row;
@@ -19,7 +16,7 @@
     text-align:center;
     background-color:#f8d7da;
     color:rgb(121, 30, 30);
-    font-family:  'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:  'Open Sans', 'Helvetica Neue', sans-serif;  
 }
 
 .signup-err{
@@ -33,7 +30,7 @@
     margin:4px;
     background-color:#ffffff;
     padding:4px;
-    min-height: 75vh;
+    min-height: 90vh;
 }
 
 .signup-form-panel{
@@ -44,8 +41,6 @@
     margin-left:auto;
     margin-right: auto;
     position:relative;
-    /* margin-top:3%;
-    margin-bottom:40px; */
     box-shadow:0 0 3px rgba(117, 116, 116, 0.6);
     background-color: #ffffff;
 }
@@ -148,8 +143,8 @@
     width:50%;
     margin-left:auto;  
     margin-right:auto; 
-    margin-top:5% 
-    
+    margin-top:5%;
+    margin-bottom:5%;  
 }
 
 .signup-form-panel button{
@@ -174,12 +169,16 @@
     .signup-form-container{
         margin-top: auto;
         margin-bottom: auto; 
+        /* border:1px solid black; */
     }
     .signup-form-panel{       
         width:60%;         
     }
 }
 @media only screen  and (max-width: 600px) {
+    .signup-form-container{   
+        min-height: 65vh;       
+     }
     .signup-form-panel{       
         width:95%;           
     }
@@ -193,7 +192,8 @@
         width:49%;
     }
     .signup-bttn{
-        width:98%; 
+        width:90%; 
+        margin-bottom:5%;
     }
     .signup-form-panel button{
         border-radius: 4px;            
@@ -202,11 +202,10 @@
 
 @media only screen  and (max-width:414px){
     .signup-form-container{   
-        min-height: 100vh;       
+        min-height: 65vh;       
      }
      .signup-form-panel{       
-         width:90%; 
-         top:30px;        
+         width:90%;       
      }
      .signup-form-group input{
          width:95%;
@@ -218,5 +217,4 @@
          width:100%;
          border-radius: 4px;            
      }
-   
 }
