--- a/client/src/components/Slider/slider.css
+++ b/client/src/components/Slider/slider.css
@@ -1,64 +1,35 @@
 
-
-
-
-
-
-
-
-
-
-  *{
-    box-sizing: border-box;
-}
-body{
-    font-family: sans-serif;
-}
-
-
 .mobile-search{
     display:none;
 }
 .slider-container{
-    /* border:1px solid black; */
     margin:2px;
     background-color: #ffffff;
     height:381px;
     margin:9px;
     border-radius:4px;
-    /* width:716px; */
-    
-
 }
 .bread-crumb{
     display:flex;
     flex-direction: row;
     margin:9px;
-    /* border:1px solid black; */
-
 }
 .bread-crumb-links{
-    /* border:1px solid black; */
     border-radius:4px;
     height:67px;
     width:312px;
     margin:5px;
     cursor: pointer;
-   
     background-color:#ffffff;
-
-
 }
-
-
 
 /* these styles are for the normal flickity component */
 .gallery{
     background: #EEE;
 }
+
 .gallery-cell{
     width:66%;
-
     height:200px;
     margin-right: 10px;
     background: #8c8;
@@ -75,93 +46,55 @@ body{
 }
 
 @media only screen  and (max-width:414px){
-     
-  .mobile-search{
-    display:inline-flex;
-    margin-top: 3px;
-}
+    .mobile-search{
+        display:inline-flex;
+        margin-top: 3px;
+    }
+    .mobile-search input[type="search"]{
 
+    font-size:0.99em;
+    font-weight: bold;
+    text-transform:lowercase;
+    background-color:white;
+    padding:3px;
+    height:35px;
+    width:95%;
+    color:black;
+    border-radius:3px;
+    margin-right:-2px;
+    margin-left:4px;
+    border-top: 1px solid rgb(160, 158, 158);
+    border-right: none;
+    border-bottom:1px solid rgb(160, 158, 158);
+    border-left:  1px solid rgb(160, 158, 158);
+    transition:all 0.5s ease-in-out;
+    font-family: 'abel';
+    }
+    .mobile-search input[type="search"]:focus{
+        font-family:'abel';
+        color: rgb(218, 152, 218);
+        outline: none;
+    }
 
-
-.mobile-search input[type="search"]{
-
-font-size:0.99em;
-font-weight: bold;
-text-transform:lowercase;
-background-color:white;
-
-
-padding:3px;
-
-height:35px;
-width:95%;
-
-color:black;
-
-border-radius:3px;
-
-margin-right:-2px;
-margin-left:4px;
-border-top: 1px solid rgb(160, 158, 158);
-border-right: none;
-border-bottom:1px solid rgb(160, 158, 158);
-border-left:  1px solid rgb(160, 158, 158);
-/* border:1px solid grey; */
-transition:all 0.5s ease-in-out;
-font-family: 'abel';
-/* font-size:15.5px; */
-
-
-}
-.mobile-search input[type="search"]:focus{
-/*   
-
-border:1px solid rgb(218, 152, 218);
-border-radius:4px;
-color:black;
-
-background-color:#e0e0e0;; */
-/* color: rgb(218, 152, 218); */
-font-family:'abel';
-color: dodgerblue;
-
-
-}
-
-
-.mobile-search-icon{
-/* background-color: rgb(218, 152, 218); */
-padding:3px;
-height:35px;
-border-left: none;
-
-
-/* position: absolute; */
-border-top: 1px solid rgb(160, 158, 158);
-border-left: none;
-border-bottom:1px solid rgb(160, 158, 158);
-border-right:  1px solid rgb(160, 158, 158);
-font-size:0.9em;
-border-radius:0 4px 4px 0;
-/* margin-top:8px; */
-margin-right:5px;
-cursor:pointer;
-background-color:white;
-
-left:320px;
-/* color:white; */
-}
-.mobile-search-icon i{
-    color:grey;
-
-
-
-
-position: relative;
-top:4px;
-padding:3px;
-
-/* border:1px solid black; */
-
-}
+    .mobile-search-icon{
+        padding:3px;
+        height:35px;
+        border-left: none;
+        border-top: 1px solid rgb(160, 158, 158);
+        border-left: none;
+        border-bottom:1px solid rgb(160, 158, 158);
+        border-right:  1px solid rgb(160, 158, 158);
+        font-size:0.9em;
+        border-radius:0 4px 4px 0;
+        margin-right:5px;
+        cursor:pointer;
+        background-color:white;
+        left:320px;
+    }
+    .mobile-search-icon i{
+        color:grey;
+        position: relative;
+        top:4px;
+        padding:3px;
+    }
 }
