--- a/client/src/components/ViewItemPage/view.css
+++ b/client/src/components/ViewItemPage/view.css
@@ -159,7 +159,7 @@
     margin-top:0.5%;
     margin-bottom:0.6%;
     min-height: 70vh;
-    /* border:1px solid black; */ 
+    /* border:1px solid black;  */
 }
 .view-item-container{
     display:flex;
@@ -243,9 +243,9 @@
     justify-content: center;
     margin-top:0.5%;
     margin-bottom:0.6%;
+      /* border:1px solid rgb(202, 14, 124); */
 }
 .view-item-size{
-    /* border:1px solid black; */
     background-color:#ffffff;
     color:rgb(212, 108, 212);
     border:1px solid rgb(218, 152, 218);
@@ -296,7 +296,6 @@
     width: 30%;
     display: flex;
     flex-direction: column;
-    /* border:1px solid black; */
     margin-right: 0.3%;
 }
 
@@ -304,7 +303,6 @@
 .view-add-qty{
     display: flex;
     flex-direction: row;
-    /* border:1px solid black;  */
     width: 100%;
 }
 .view-add-qty button{
@@ -492,3 +490,70 @@ display: none;
     height: 40px;
     }
 } */
+@media only screen  and (max-width: 910px) {
+    .view-item-container{
+        
+        width:95%;
+        min-height:70vh;
+    }
+    .view-item-alert{
+        position: fixed;
+        top: 65px;
+        left: 45%;
+        width:55%;
+        margin:1.4% 0 1.4% 1.5% ;
+    }
+    .view-back-bttn{
+        position: fixed;
+        top:12%;
+        left:7%;
+      
+  }
+  .view-quantity{
+    width: 40%;
+    margin-right: 0.3%;
+}
+.view-add-to-cart{
+    width: 40%;
+}
+.view-item-size{
+    width:12%;
+}
+.view-info{
+   width:100%;
+}
+.view-product-img{
+    
+}
+.view-img{
+ 
+}
+   
+}
+
+@media only screen  and (max-width: 600px) {
+    .view-back-bttn{
+        position: fixed;
+        top:12%;
+        left:7%;
+      
+  }
+    .view-product-img{ 
+        width:60%;
+    }
+    .view-img{
+      width: 100%;;
+    }  
+}
+
+@media only screen and (max-width:414px) {
+   
+}
+
+@media only screen and (max-width:360px) {
+   
+}
+
+@media only screen and (max-width:305px) {
+   
+}
