addded other navigation links and connected context API to mobile nav component

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -187,13 +187,14 @@ footer li{
     .footer-legal{
         margin-top:2%;
         padding: 3%;
+        /* border:1px solid yellow; */
+        justify-content: center;
     }
     
     .footer-legal-list {
         display: flex;
         flex-wrap: wrap;
         justify-content:space-between;
-        /* border:1px solid yellow; */
         width: 100%;
     }
 
