--- a/client/src/components/WomenCollectionPage/womenCollection.css
+++ b/client/src/components/WomenCollectionPage/womenCollection.css
@@ -8,7 +8,7 @@
 
 .women-collections-items-header{
   display:flex;
-  flex:1;
+  /* flex:1; */
   justify-content:center;
   background-color:#ffffff;
   color:black;
@@ -16,9 +16,15 @@
 }
 
 .women-collections-title{
-  /* border:1px solid green; */
   display:flex;
   flex:1;
+  justify-content: center;
+  display:flex;
+  flex-direction:row;
+  flex: 1;
+  background-color:#ffffff;
+  color:black;
+  margin-bottom:0.15%;
   justify-content: center;
 
 }
@@ -38,3 +44,47 @@
   flex-wrap: wrap;
   justify-content:space-between;
 } 
+
+ @media only screen and (max-width: 910px){
+  .women-collections-title{
+    justify-content: unset;
+  }
+ .women-collections-title h3{
+  width:100%;
+  text-indent: 29.5%;
+}
+
+ }
+
+ @media only screen  and (max-width: 600px) {
+    
+  .women-collections-title{
+    justify-content: unset;
+  }
+ .women-collections-title h3{
+  width:100%;
+  text-indent: 22%;
+}
+
+
+}
+@media only screen  and (max-width: 500px) { 
+  .women-collections-title{
+    justify-content: unset;
+  }
+ .women-collections-title h3{
+  width:100%;
+  text-indent: 19.5%;
+}
+
+}
+
+@media only screen  and (max-width: 414px) { 
+  .women-collections-title{
+    justify-content: unset;
+  }
+ .women-collections-title h3{
+  width:100%;
+  text-indent: 8%;
+}
+}
