--- a/client/src/components/WomenClothingsPages/womenClothings.css
+++ b/client/src/components/WomenClothingsPages/womenClothings.css
@@ -11,7 +11,8 @@
   flex:1;
   justify-content:center;
   background-color:#ffffff;
-  color:black;
+ 
+  color:rgb(218, 152, 218);
   margin-bottom:2px;
 }
  
