--- a/client/src/components/WomenCollectionPage/womenCollection.css
+++ b/client/src/components/WomenCollectionPage/womenCollection.css
@@ -23,7 +23,7 @@
   flex-direction:row;
   flex: 1;
   background-color:#ffffff;
-  color:black;
+  color:rgb(218, 152, 218);
   margin-bottom:0.15%;
   justify-content: center;
 
