--- a/client/src/components/LatestDealsPage/latestDeals.css
+++ b/client/src/components/LatestDealsPage/latestDeals.css
@@ -22,6 +22,7 @@ margin-bottom:0.15%;
   flex: 1;
   background-color:#ffffff;
   color:black;
+  color:rgb(218, 152, 218);
   margin-bottom:0.15%;
   justify-content: center;
 }
