--- a/client/src/components/Cart/fullcart.css
+++ b/client/src/components/Cart/fullcart.css
@@ -100,13 +100,20 @@
     width:80%;  
     height: 45px;
     border:0;
-    background-color: rgb(218, 152, 218);
-    color: #ffffff;
+    /* background-color: rgb(218, 152, 218); */
+    background-color: #eff0ef;
+    color: rgb(218, 152, 218);
     font-size: 1em;
     font-family:'acme';
     font-weight: bold; 
     margin-right: auto;
      transition:all 0.3s ease;
+     border-radius: 4px;
+}
+.card-remove-button button:hover{
+    text-decoration: underline;
+    cursor: pointer;
+
 }
 
 .full-cart-total{
@@ -149,11 +156,17 @@
     background-color: rgb(212, 108, 212);
     color: #ffffff;
 }
+.full-cart-button button:hover{
+    cursor: pointer;
+    border:none;
+    background-color: rgb(212, 108, 212);
+    color: #ffffff;
+}
 
-.full-cart-body button:hover{
+/* .full-cart-body button:hover{
     cursor:pointer;
     background-color: rgb(212, 108, 212);
-}
+} */
 
 .full-cart-body button a{
     text-decoration:none;
