--- a/client/src/components/SignupPage/signup.css
+++ b/client/src/components/SignupPage/signup.css
@@ -176,6 +176,11 @@
     }
 }
 @media only screen  and (max-width: 600px) {
+    .signup-err-container{
+    }
+    .signup-err-cont{       
+        width:80%;
+    }
     .signup-form-container{   
         min-height: 65vh;       
      }
